till 11th video

--- a/mysite/main/templates/main/category.html
+++ b/mysite/main/templates/main/category.html
@@ -8,7 +8,7 @@
             <div class="card blue-grey darken-1 hoverable">
                 <div class="card-content white-text">
                 <span class="card-title">{{tut.tutorial_series}}</span>
-                <p>{{tut.tutorial_summary}}</p>
+                <p>{{tut.series_summary}}</p>
                 </div>
                 <div class="card-action">
                 </div>
